--- a/src/main/resources/fxml/LoginMenu.fxml
+++ b/src/main/resources/fxml/LoginMenu.fxml
@@ -8,7 +8,7 @@
 
 <Pane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.LoginRegisterController.LoginMenuController">
    <children>
-      <MenuBar prefHeight="25.0" prefWidth="612.0">
+      <MenuBar prefHeight="25.0" prefWidth="1280.0">
         <menus>
           <Menu mnemonicParsing="false" text="Login or Register">
             <items>
@@ -25,14 +25,14 @@
           </Menu>
         </menus>
       </MenuBar>
-      <TextField fx:id="usernameTextField" layoutX="205.0" layoutY="127.0" />
-      <TextField fx:id="passwordTextField" layoutX="205.0" layoutY="261.0" />
-      <CheckBox fx:id="passwordCheckBox" layoutX="354.0" layoutY="265.0" mnemonicParsing="false" text="Show Password?" />
-      <Label layoutX="145.0" layoutY="131.0" text="username" />
-      <Label layoutX="145.0" layoutY="265.0" text="password" />
-      <Button layoutX="211.0" layoutY="348.0" mnemonicParsing="false" onAction="#login" prefHeight="51.0" prefWidth="141.0" text="Login" />
-      <PasswordField fx:id="passwordField" layoutX="205.0" layoutY="261.0" />
-      <Label fx:id="errorLabel" layoutX="206.0" layoutY="309.0" prefHeight="17.0" prefWidth="149.0" />
-      <Button layoutY="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="68.0" text="Back" onAction="#back" />
+      <TextField fx:id="usernameTextField" layoutX="570.0" layoutY="127.0" />
+      <TextField fx:id="passwordTextField" layoutX="570.0" layoutY="261.0" />
+      <CheckBox fx:id="passwordCheckBox" layoutX="719.0" layoutY="265.0" mnemonicParsing="false" text="Show Password?" />
+      <Label layoutX="503.0" layoutY="131.0" text="username" />
+      <Label layoutX="503.0" layoutY="265.0" text="password" />
+      <Button layoutX="574.0" layoutY="378.0" mnemonicParsing="false" onAction="#login" prefHeight="51.0" prefWidth="141.0" text="Login" />
+      <PasswordField fx:id="passwordField" layoutX="570.0" layoutY="261.0" />
+      <Label fx:id="errorLabel" layoutX="570.0" layoutY="320.0" prefHeight="17.0" prefWidth="149.0" />
+      <Button layoutY="25.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="68.0" text="Back" />
    </children>
 </Pane>
