--- a/src/main/resources/fxml/AdminMenu/AdminMenu.fxml
+++ b/src/main/resources/fxml/AdminMenu/AdminMenu.fxml
@@ -26,7 +26,6 @@
        <Button layoutX="217.0" layoutY="253.0" onMouseClicked="#addDiscountCode" prefHeight="27.0" prefWidth="169.0" text="add discount code" />
        <Button layoutX="21.0" layoutY="298.0" onMouseClicked="#addCategory" prefHeight="27.0" prefWidth="148.0" text="add category" />
        <Button layoutX="21.0" layoutY="253.0" onMouseClicked="#createAdminProfile" prefHeight="27.0" prefWidth="148.0" text="create admin profile" />
-      <ImageView fitHeight="146.0" fitWidth="200.0" layoutX="427.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" />
-      <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="685.0" layoutY="44.0" pickOnBounds="true" preserveRatio="true" />
+      <ImageView fitHeight="146.0" fitWidth="200.0" layoutX="427.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" fx:id="adminImage" />
    </children>
 </AnchorPane>
