--- a/src/main/resources/fxml/BuyerMenu/BuyerMenu.fxml
+++ b/src/main/resources/fxml/BuyerMenu/BuyerMenu.fxml
@@ -25,7 +25,8 @@
                </Menu>
            </menus>
        </MenuBar>
-      <ImageView fitHeight="150.0" fitWidth="183.0" layoutX="14.0" layoutY="92.0" pickOnBounds="true" preserveRatio="true" fx:id="userImage" />
+      <ImageView fx:id="userImage" fitHeight="170.0" fitWidth="201.0" layoutX="24.0" layoutY="119.0" pickOnBounds="true" preserveRatio="true" />
+      <BorderPane layoutX="48.0" layoutY="328.0" prefHeight="200.0" prefWidth="475.0" />
    </children>
 
 </AnchorPane>
