--- a/src/main/resources/fxml/CartMenu.fxml
+++ b/src/main/resources/fxml/CartMenu.fxml
@@ -10,5 +10,27 @@
             xmlns:fx="http://javafx.com/fxml"
             fx:controller="View.Menus.MenuController.CartMenuController"
             prefHeight="720.0" prefWidth="1280.0">
+    <Button layoutY="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="58.0" text="Back" onAction="#back"  />
+    <MenuBar prefHeight="25.0" prefWidth="1280.0">
+        <menus>
+            <Menu mnemonicParsing="false" text="Options">
+                <items>
+                    <MenuItem mnemonicParsing="false" onAction="#goToUserZone" text="User Zone" />
+                    <MenuItem mnemonicParsing="false" onAction="#goToDiscountCodes" text="View Discount Codes" />
+                    <MenuItem mnemonicParsing="false" onAction="#goToShopMenu" text="Shop Menu" />
+                    <MenuItem mnemonicParsing="false" onAction="#goToDiscounts" text="Discounts" />
+                    <MenuItem mnemonicParsing="false" onAction="#goToBuyerOrders" text="View Orders" />
+                    <MenuItem mnemonicParsing="false" text="Logout" onAction="#logout"/>
+                    <MenuItem mnemonicParsing="false" text="Exit" onAction="#Exit"/>
+                </items>
+            </Menu>
+            <Menu mnemonicParsing="false" text="Help">
+                <items>
+                    <MenuItem mnemonicParsing="false" text="About" />
+                </items>
+            </Menu>
+        </menus>
+    </MenuBar>
+
 
 </AnchorPane>
