--- a/src/main/resources/fxml/ItemMenu.fxml
+++ b/src/main/resources/fxml/ItemMenu.fxml
@@ -11,4 +11,14 @@
             fx:controller="View.Menus.MenuController.ItemMenuController"
             prefHeight="720.0" prefWidth="1280.0">
 
+    <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
+        <menus>
+            <Menu mnemonicParsing="false" text="option">
+
+
+
+            </Menu>
+        </menus>
+    </MenuBar>
+
 </AnchorPane>
