--- a/src/main/resources/fxml/SellerMenu/SellerManageProductsMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerManageProductsMenu.fxml
@@ -17,5 +17,7 @@
     <ListView fx:id="listView" layoutX="389.0" layoutY="131.0" onMouseClicked="#requestSelect" prefHeight="459.0" prefWidth="502.0" />
    <Button layoutX="925.0" layoutY="131.0" mnemonicParsing="false" onAction="#addProduct" prefHeight="25.0" prefWidth="101.0" text="Add Product" />
    <Label layoutX="389.0" layoutY="84.0" prefHeight="33.0" prefWidth="101.0" text="Your Items:" />
+   <TextField fx:id="itemTextField" layoutX="389.0" layoutY="615.0" prefHeight="25.0" prefWidth="169.0" promptText="Enter an Item ID" />
+   <Button layoutX="569.0" layoutY="615.0" mnemonicParsing="false" onAction="#manageProduct" text="Manage" />
 
 </AnchorPane>
