--- a/src/main/resources/fxml/BuyerMenu/BuyerDiscountCodes.fxml
+++ b/src/main/resources/fxml/BuyerMenu/BuyerDiscountCodes.fxml
@@ -8,7 +8,7 @@
 
 <AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.BuyerMenu.BuyerDiscountCodesMenuController">
    <children>
-      <Button layoutY="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="58.0" text="Back" onAction="#back" />
+      <Button layoutY="25.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="58.0" text="Back" />
       <MenuBar prefHeight="25.0" prefWidth="1280.0">
         <menus>
           <Menu mnemonicParsing="false" text="Options">
@@ -18,8 +18,9 @@
                   <MenuItem mnemonicParsing="false" onAction="#goToShopMenu" text="Shop Menu" />
                   <MenuItem mnemonicParsing="false" onAction="#goToDiscounts" text="Discounts" />
                   <MenuItem mnemonicParsing="false" onAction="#goToBuyerOrders" text="View Orders" />
-                  <MenuItem mnemonicParsing="false" text="Logout" onAction="#logout"/>
-              <MenuItem mnemonicParsing="false" text="Exit" onAction="#Exit"/>
+                  <MenuItem mnemonicParsing="false" text="Edit" onAction="#ViewEditPersonalInfo"/>
+                  <MenuItem mnemonicParsing="false" onAction="#logout" text="Logout" />
+              <MenuItem mnemonicParsing="false" onAction="#Exit" text="Exit" />
             </items>
           </Menu>
           <Menu mnemonicParsing="false" text="Help">
