--- a/src/main/resources/fxml/BuyerMenu/BuyerMenu.fxml
+++ b/src/main/resources/fxml/BuyerMenu/BuyerMenu.fxml
@@ -19,6 +19,7 @@
                       <MenuItem mnemonicParsing="false" onAction="#viewDiscounts" text="Discounts" />
                       <MenuItem mnemonicParsing="false" onAction="#viewDiscountCodes" text="View Discount Codes" />
                       <MenuItem mnemonicParsing="false" onAction="#viewOrders" text="View Orders" />
+                  <MenuItem mnemonicParsing="false" text="Edit" onAction="#viewEditPersonalInfo" />
                       <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
                       <MenuItem mnemonicParsing="false" onAction="#logout" text="logout" />
                   </items>
