--- a/src/main/resources/fxml/ShopMenu.fxml
+++ b/src/main/resources/fxml/ShopMenu.fxml
@@ -6,30 +6,10 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="View.Menus.MenuController.ShopMenuController"
-            prefHeight="720.0" prefWidth="1280.0">
-    <Button layoutY="25.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="58.0" text="Back" onAction="#back"/>
-    <MenuBar prefHeight="25.0" prefWidth="1280.0">
-        <menus>
-            <Menu mnemonicParsing="false" text="Options">
-                <items>
-                    <MenuItem mnemonicParsing="false" onAction="#goToUserZone" text="User Zone" />
-                    <MenuItem mnemonicParsing="false" onAction="#goToCart" text="View Cart" />
-                    <MenuItem mnemonicParsing="false" onAction="#goToDiscountCodes" text="Buyer Discount Codes" />
-                    <MenuItem mnemonicParsing="false" onAction="#goToDiscounts" text="Discounts" />
-                    <MenuItem mnemonicParsing="false" onAction="#goToBuyerOrders" text="View Orders" />
-                    <MenuItem mnemonicParsing="false" text="Logout" onAction="#logout"/>
-                    <MenuItem mnemonicParsing="false" text="Exit" onAction="#Exit"/>
-                </items>
-            </Menu>
-            <Menu mnemonicParsing="false" text="Help">
-                <items>
-                    <MenuItem mnemonicParsing="false" text="About" />
-                </items>
-            </Menu>
-        </menus>
-    </MenuBar>
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.ShopMenuController">
+   <children>
+       <Button layoutY="25.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="58.0" text="Back" />
+
+   </children>
 
 </AnchorPane>
