--- a/src/main/resources/fxml/AdminMenu/AdminMenu.fxml
+++ b/src/main/resources/fxml/AdminMenu/AdminMenu.fxml
@@ -1,11 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.image.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.AdminMenuController">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.AdminMenu.AdminMenuController">
    <children>
        <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
            <menus>
@@ -15,17 +14,22 @@
                       <MenuItem mnemonicParsing="false" onAction="#logout" text="logout" />
                   </items>
                </Menu>
+               <Menu text="manage">
+                   <MenuItem onAction="#manageCategories" text="manage category" />
+                   <MenuItem onAction="#manageProducts" text="manage products" />
+                   <MenuItem onAction="#manageRequests" text="manage requests" />
+                   <MenuItem onAction="#manageDiscountCodes" text="manage discount codes" />
+                   <MenuItem onAction="#manageUsers" text="manage users" />
+               </Menu>
+               <Menu text="add">
+                   <MenuItem onAction="#createAdminProfile" text="manager profile" />
+                   <MenuItem onAction="#addCategory" text="category" />
+                   <MenuItem onAction="#addDiscountCode" text="discount code" />
+               </Menu>
            </menus>
        </MenuBar>
-       <Button layoutX="21.0" layoutY="133.0" onMouseClicked="#manageUsers" prefHeight="27.0" prefWidth="148.0" text="manage users">  </Button>
-       <Button layoutX="21.0" layoutY="77.0" onMouseClicked="#manageDiscountCodes" text="manage discount codes">  </Button>
-       <Button layoutX="217.0" layoutY="200.0" onMouseClicked="#manageRequests" prefHeight="27.0" prefWidth="169.0" text="manage requests">  </Button>
-       <Button layoutX="217.0" layoutY="133.0" onMouseClicked="#manageProducts" prefHeight="27.0" prefWidth="169.0" text="manage products" />
-       <Button layoutX="217.0" layoutY="77.0" onMouseClicked="#manageCategories" prefHeight="27.0" prefWidth="169.0" text="manage categories" />
-       <Button layoutX="21.0" layoutY="200.0" prefHeight="27.0" prefWidth="148.0" text="view personal info"> </Button>
-       <Button layoutX="217.0" layoutY="253.0" onMouseClicked="#addDiscountCode" prefHeight="27.0" prefWidth="169.0" text="add discount code" />
-       <Button layoutX="21.0" layoutY="298.0" onMouseClicked="#addCategory" prefHeight="27.0" prefWidth="148.0" text="add category" />
-       <Button layoutX="21.0" layoutY="253.0" onMouseClicked="#createAdminProfile" prefHeight="27.0" prefWidth="148.0" text="create admin profile" />
-      <ImageView fitHeight="146.0" fitWidth="200.0" layoutX="427.0" layoutY="81.0" pickOnBounds="true" preserveRatio="true" fx:id="adminImage" />
+       <Button layoutX="26.0" layoutY="227.0" prefHeight="27.0" prefWidth="190.0" text="view personal info" onMouseClicked="#editPersonalInfo"> </Button>
+      <ImageView fx:id="adminImage" fitHeight="161.0" fitWidth="200.0" layoutX="315.0" layoutY="39.0" pickOnBounds="true" preserveRatio="true" />
+      <ListView layoutX="26.0" layoutY="39.0" prefHeight="161.0" prefWidth="190.0" />
    </children>
 </AnchorPane>
