--- a/src/main/resources/fxml/SellerMenu/SellerEditItemMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerEditItemMenu.fxml
@@ -1,24 +1,22 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane xmlns="http://javafx.com/javafx"
-            xmlns:fx="http://javafx.com/fxml"
-            fx:controller="View.Menus.MenuController.SellerMenuController.SellerEditItemMenu"
-            prefHeight="720.0" prefWidth="1280.0">
+<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.SellerMenuController.SellerEditItemMenu">
 
     <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
         <menus>
             <Menu mnemonicParsing="false" text="option">
 
-                <MenuItem mnemonicParsing="false" text="back" onAction="#back" ></MenuItem>
-                <MenuItem mnemonicParsing="false" text="logout" onAction="#logout"></MenuItem>
+                <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
+                <MenuItem mnemonicParsing="false" onAction="#logout" text="logout" />
             </Menu>
         </menus>
     </MenuBar>
+   <ListView fx:id="listView" onMouseClicked="#keySelect" layoutX="445.0" layoutY="88.0" prefHeight="519.0" prefWidth="390.0" />
+   <Button fx:id="removeItem" layoutX="445.0" layoutY="641.0" mnemonicParsing="false" onAction="#removeItem" prefHeight="25.0" prefWidth="131.0" text="Remove Item" />
+   <Button fx:id="viewBuyers" layoutX="640.0" layoutY="641.0" mnemonicParsing="false" onAction="#viewBuyers" prefHeight="25.0" prefWidth="131.0" text="View Buyers" />
+   <Label fx:id="label" layoutX="445.0" layoutY="50.0" prefHeight="17.0" prefWidth="116.0" text="Label" />
 
 </AnchorPane>
