--- a/src/main/resources/fxml/SellerMenu/SellerMenu.fxml
+++ b/src/main/resources/fxml/SellerMenu/SellerMenu.fxml
@@ -19,6 +19,7 @@
                       <MenuItem mnemonicParsing="false" onAction="#viewShop" text="Shop" />
                       <MenuItem mnemonicParsing="false" onAction="#viewDiscounts" text="Discounts" />
                       <MenuItem mnemonicParsing="false" onAction="#back" text="back" />
+                      <MenuItem text="edit personal info" onAction="#editPersonalInfo"></MenuItem>
                       <MenuItem mnemonicParsing="false" onAction="#logout" text="logout" />
                   </items>
                </Menu>
