--- a/src/main/resources/fxml/MainMenu.fxml
+++ b/src/main/resources/fxml/MainMenu.fxml
@@ -7,17 +7,18 @@
    <children>
      <MenuBar layoutY="1.0" prefHeight="25.0" prefWidth="1280.0">
        <menus>
-         <Menu mnemonicParsing="false" text="Log in or Register" fx:id="menu">
+         <Menu fx:id="menu" mnemonicParsing="false" text="Log in or Register">
            <items>
              <MenuItem mnemonicParsing="false" onAction="#login" text="Log In" />
              <MenuItem mnemonicParsing="false" onAction="#registerBuyer" text="Register Buyer" />
              <MenuItem mnemonicParsing="false" onAction="#registerSeller" text="Register Seller" />
            </items>
          </Menu>
-         <Menu text="user zone"></Menu>
+         <Menu text="user zone" />
        </menus>
      </MenuBar>
      <Button layoutX="80.0" layoutY="133.0" mnemonicParsing="false" onAction="#userzone" text="user zone" />
+      <Button layoutX="458.0" layoutY="133.0" mnemonicParsing="false" onAction="#shop" text="Shop" />
    </children>
 
 </Pane>
