--- a/src/main/resources/fxml/ShopMenu.fxml
+++ b/src/main/resources/fxml/ShopMenu.fxml
@@ -3,24 +3,19 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 
-<AnchorPane prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.ShopMenuController">
+<AnchorPane fx:id="anchorPane" prefHeight="720.0" prefWidth="1280.0" xmlns="http://javafx.com/javafx/10.0.2-internal" xmlns:fx="http://javafx.com/fxml/1" fx:controller="View.Menus.MenuController.ShopMenuController">
    <children>
        <Button layoutY="25.0" mnemonicParsing="false" onAction="#back" prefHeight="25.0" prefWidth="58.0" text="Back" />
-      <ScrollPane layoutX="249.0" layoutY="158.0" prefHeight="537.0" prefWidth="751.0">
+      <ScrollPane fx:id="scrollPane" hbarPolicy="NEVER" layoutX="249.0" layoutY="158.0" prefHeight="537.0" prefWidth="751.0" vbarPolicy="ALWAYS">
          <content>
-            <GridPane fx:id="gridPane" prefHeight="590.0" prefWidth="750.0">
+            <GridPane fx:id="gridPane" prefHeight="1353.0" prefWidth="751.0">
               <columnConstraints>
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="367.0" minWidth="10.0" prefWidth="187.0" />
-                <ColumnConstraints hgrow="SOMETIMES" maxWidth="563.0" minWidth="10.0" prefWidth="563.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+                  <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
               </columnConstraints>
-              <rowConstraints>
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-              </rowConstraints>
             </GridPane>
-         </content>
-      </ScrollPane>
+         </content></ScrollPane>
 
    </children>
 
